# neuroswarm

./: .env.example  .gitignore  .wp_publisher.env  CHANGELOG-NOV-2025.md  CONTRIBUTING-NATIVE.md  CONTRIBUTOR-OUTREACH-CAMPAIGN.md  Key-Principles-of-Neuroswarm.md  README.md  README_temp.txt  RELEASE_CHECKLIST_v0.1.1.md  SYNC-AGENT-README.md  WORDPRESS_AUTOMATION_SYSTEM.md  WP_PUBLISHER_README.md  board_state.json  brain-dashboard.html  cancel-queued-actions.bat  cancel-queued-actions.ps1  content_sync.py  docker-compose.production.yml  docker-compose.yml  docs-parity.json  example-content.json  governance-alerts.jsonl  governance-timeline.jsonl  grafana-dashboard.json  master-design-document.md  monitor-dashboard.html  package.json  phase-b-generative-backend.md  pnpm-lock.yaml  prometheus.yml  publish-wiki-now.bat  run-cancel-queued-actions.cmd  setup_wp_publisher.sh  start-all-nodes.bat  start-all-nodes.sh  start-universal-p2p.bat  sync-agent.ps1  test-crypto.js  test-file-upload.js  (+8 more)
.github/: CODEOWNERS  GITHUB_ACTIONS_GUIDE.md  PULL_REQUEST_TEMPLATE.md
CLI/: neuroswarm-cli.html
NS-LLM/: .gitignore  .spectral.yaml  CONTRIBUTING-NATIVE.md  Dockerfile  README.md  benchmark.js  compute-checksums.js  index.js  native-shim.js  ns-llm-client.js  openapi.yaml  package.json  server.js  test-client.js  test-integration.js  test-native-inference.js  test-shim.js  test_e2e_full.cjs  verify-models.js
NS-LLM/native/: CMakeLists.txt  README.md  build.sh  version.h.in
NS-LLM/native/src/: main.cpp
RELEASES/: public-key.asc
admin-node/: .env.example  README.md  generate-token.js  genesis-fingerprints.json  governance-timeline.jsonl  package-lock.json  package.json  tsconfig.json
agent3/: neuroswarm_client.py  start_agent3_server.bat
agent9/: audit-logger.ts  provenance-attachment.ts  resilience-service.ts  streaming-manager.ts
agents/: sync-agent.ps1
alert-sink/: .env.example  README.md  index.js  package.json  pnpm-lock.yaml
config/: .eslintrc.json  .wp_publisher.env  tsconfig.json
content/: getting-started.json  governance.json  onboarding.json  transparency.json  updates.json
contracts/: VPBlockHeader.json
dashboard/: grafana-sync-dashboard.json
data/: bootstrap-proposals.json
discord/: AGENT9_ABOUT.md  AGENT9_CREDENTIALS.md  README.md  package-lock.json  package.json
docs/: CONTRIBUTOR-GUIDE.md  Definition of Trusted Data and the Fight Against Misinformation.md  EXTENSIONS.md  GATEWAY-NODES.md  GOVERNANCE.md  INDEXER-NODES.md  INDEXING-DISCOVERY.md  IPFS-storage.md  NODE-DESIGN.md  PR-BODY-CN-06.md  README.md  TERMS.md  TOKENOMICS.md  VALIDATOR-NODES.md  WIKI-HOME-PROTECTION.md  admin-genesis.json  admin-node-genesis.md  (+24 more)
programs/nst-staking/: Cargo.toml
programs/nst-staking/src/: lib.rs
(+1240 files in other folders)
