[package]
name = "nst_staking_program"
version = "0.1.0"
description = "NeuroSwarm Network Staking and Reputation Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nst_staking_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
